2002-11-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for eel in 2.1-core.

2002-11-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for devhelp.

2002-11-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to correct some modules for 2.1.
	Moved acme, file-roller and vte from 2.1-extras to 2.1-core. Moved
	ggv from 2.1-fifth-toe to 2.1-core. Added gnome-icon-theme,
	gnome-themes and nautilus-media to 2.1-core. Removed sawfish from
	2.1-core.

2002-11-22  Kjartan Maraas  <kmaraas@gnome.org>

	* translation-status.xml: Try to add 2.1.x status.
	
2002-11-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gtkhtml.

2002-11-13  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Added gswitchit for GNOME 2.0

2002-11-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-mime-data.

2002-11-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gnucash entry. Gnucash
	translations are now managed by the Translation Project.

2002-11-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for gnome-hello.

2002-11-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed devhelp-gnome-2 branch
	information. It's currently under porting and is thus very unstable
	right now. Also added missing pot filename information for
	monkey-media.

2002-11-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for libbonoboui.

2002-11-02  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Added libmimedir.
	Added monkey-media.

2002-11-01  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Gthumb now uses gthumb.pot instead of
	gthumb-2.0.pot.

2002-10-29  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Added gthumb.
