@@ -694,6 +694,17 @@
       </component>
     </version>
   </module>
+  <module name="gcm">
+    <version release="gnome-2.1-extras">
+      <component name="gcm" dir="gcm">
+	<podir dir="po"/>
+	<potname name="gcm-2.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gcolorsel2">
     <version release="gnome-1.4-extras">
       <component name="gcolorsel2" dir="gcolorsel2">
