@@ -1,3 +1,7 @@
+2002-11-27  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gcm to 2.1-extras.
+
 2002-11-26  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed pot file name for eel in 2.1-core.
